pkg/rdt/rdt_parser.go
// Code generated from ./rdtParser.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // rdtParser

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type rdtParser struct {
	*antlr.BaseParser
}

var RdtParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func rdtparserParserInit() {
	staticData := &RdtParserParserStaticData
	staticData.LiteralNames = []string{
		"", "'('", "')'", "'|'", "'[]'", "'?'", "'.'", "'string'", "'integer'",
		"'number'", "'boolean'", "'datetime'", "'time-only'", "'datetime-only'",
		"'date-only'", "'file'", "'nil'", "'any'", "'array'", "'object'", "'union'",
	}
	staticData.SymbolicNames = []string{
		"", "LPAREN", "RPAREN", "PIPE", "ARRAY_NOTATION", "OPTIONAL_NOTATION",
		"DOT", "STRING_TYPE", "INTEGER_TYPE", "NUMBER_TYPE", "BOOLEAN_TYPE",
		"DATETIME_TYPE", "TIME_ONLY_TYPE", "DATETIME_ONLY_TYPE", "DATE_ONLY_TYPE",
		"FILE_TYPE", "NIL_TYPE", "ANY_TYPE", "ARRAY_TYPE", "OBJECT_TYPE", "UNION_TYPE",
		"IDENTIFIER", "WS",
	}
	staticData.RuleNames = []string{
		"entrypoint", "expression", "type", "primitive", "optional", "array",
		"union", "group", "reference",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// rdtParserInit initializes any static state used to implement rdtParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewrdtParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func RdtParserInit() {
	staticData := &RdtParserParserStaticData
	staticData.once.Do(rdtparserParserInit)
}

// NewrdtParser produces a new parser instance for the optional input antlr.TokenStream.
func NewrdtParser(input antlr.TokenStream) *rdtParser {
	RdtParserInit()
	this := new(rdtParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &RdtParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "rdtParser.g4"

	return this
}

// rdtParser tokens.
const (
	rdtParserEOF                = antlr.TokenEOF
	rdtParserLPAREN             = 1
	rdtParserRPAREN             = 2
	rdtParserPIPE               = 3
	rdtParserARRAY_NOTATION     = 4
	rdtParserOPTIONAL_NOTATION  = 5
	rdtParserDOT                = 6
	rdtParserSTRING_TYPE        = 7
	rdtParserINTEGER_TYPE       = 8
	rdtParserNUMBER_TYPE        = 9
	rdtParserBOOLEAN_TYPE       = 10
	rdtParserDATETIME_TYPE      = 11
	rdtParserTIME_ONLY_TYPE     = 12
	rdtParserDATETIME_ONLY_TYPE = 13
	rdtParserDATE_ONLY_TYPE     = 14
	rdtParserFILE_TYPE          = 15
	rdtParserNIL_TYPE           = 16
	rdtParserANY_TYPE           = 17
	rdtParserARRAY_TYPE         = 18
	rdtParserOBJECT_TYPE        = 19
	rdtParserUNION_TYPE         = 20
	rdtParserIDENTIFIER         = 21
	rdtParserWS                 = 22
)

// rdtParser rules.
const (
	rdtParserRULE_entrypoint = 0
	rdtParserRULE_expression = 1
	rdtParserRULE_type       = 2
	rdtParserRULE_primitive  = 3
	rdtParserRULE_optional   = 4
	rdtParserRULE_array      = 5
	rdtParserRULE_union      = 6
	rdtParserRULE_group      = 7
	rdtParserRULE_reference  = 8
)

// IEntrypointContext is an interface to support dynamic dispatch.
type IEntrypointContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Expression() IExpressionContext
	EOF() antlr.TerminalNode

	// IsEntrypointContext differentiates from other interfaces.
	IsEntrypointContext()
}

type EntrypointContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyEntrypointContext() *EntrypointContext {
	var p = new(EntrypointContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = rdtParserRULE_entrypoint
	return p
}

func InitEmptyEntrypointContext(p *EntrypointContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = rdtParserRULE_entrypoint
}

func (*EntrypointContext) IsEntrypointContext() {}

func NewEntrypointContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *EntrypointContext {
	var p = new(EntrypointContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = rdtParserRULE_entrypoint

	return p
}

func (s *EntrypointContext) GetParser() antlr.Parser { return s.parser }

func (s *EntrypointContext) Expression() IExpressionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExpressionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *EntrypointContext) EOF() antlr.TerminalNode {
	return s.GetToken(rdtParserEOF, 0)
}

func (s *EntrypointContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *EntrypointContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *EntrypointContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case rdtParserVisitor:
		return t.VisitEntrypoint(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *rdtParser) Entrypoint() (localctx IEntrypointContext) {
	localctx = NewEntrypointContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, rdtParserRULE_entrypoint)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(18)
		p.Expression()
	}
	{
		p.SetState(19)
		p.Match(rdtParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IExpressionContext is an interface to support dynamic dispatch.
type IExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Type_() ITypeContext
	Union() IUnionContext

	// IsExpressionContext differentiates from other interfaces.
	IsExpressionContext()
}

type ExpressionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExpressionContext() *ExpressionContext {
	var p = new(ExpressionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = rdtParserRULE_expression
	return p
}

func InitEmptyExpressionContext(p *ExpressionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = rdtParserRULE_expression
}

func (*ExpressionContext) IsExpressionContext() {}

func NewExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExpressionContext {
	var p = new(ExpressionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = rdtParserRULE_expression

	return p
}

func (s *ExpressionContext) GetParser() antlr.Parser { return s.parser }

func (s *ExpressionContext) Type_() ITypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeContext)
}

func (s *ExpressionContext) Union() IUnionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IUnionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IUnionContext)
}

func (s *ExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpressionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ExpressionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case rdtParserVisitor:
		return t.VisitExpression(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *rdtParser) Expression() (localctx IExpressionContext) {
	localctx = NewExpressionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, rdtParserRULE_expression)
	p.SetState(23)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(21)
			p.Type_()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(22)
			p.Union()
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITypeContext is an interface to support dynamic dispatch.
type ITypeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Primitive() IPrimitiveContext
	Group() IGroupContext
	Reference() IReferenceContext
	Array() IArrayContext
	Optional() IOptionalContext

	// IsTypeContext differentiates from other interfaces.
	IsTypeContext()
}

type TypeContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTypeContext() *TypeContext {
	var p = new(TypeContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = rdtParserRULE_type
	return p
}

func InitEmptyTypeContext(p *TypeContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = rdtParserRULE_type
}

func (*TypeContext) IsTypeContext() {}

func NewTypeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TypeContext {
	var p = new(TypeContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = rdtParserRULE_type

	return p
}

func (s *TypeContext) GetParser() antlr.Parser { return s.parser }

func (s *TypeContext) Primitive() IPrimitiveContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPrimitiveContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPrimitiveContext)
}

func (s *TypeContext) Group() IGroupContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IGroupContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IGroupContext)
}

func (s *TypeContext) Reference() IReferenceContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IReferenceContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IReferenceContext)
}

func (s *TypeContext) Array() IArrayContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IArrayContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IArrayContext)
}

func (s *TypeContext) Optional() IOptionalContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IOptionalContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IOptionalContext)
}

func (s *TypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TypeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TypeContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case rdtParserVisitor:
		return t.VisitType(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *rdtParser) Type_() (localctx ITypeContext) {
	localctx = NewTypeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, rdtParserRULE_type)
	p.SetState(30)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(25)
			p.Primitive()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(26)
			p.Group()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(27)
			p.Reference()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(28)
			p.Array()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(29)
			p.Optional()
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IPrimitiveContext is an interface to support dynamic dispatch.
type IPrimitiveContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	STRING_TYPE() antlr.TerminalNode
	INTEGER_TYPE() antlr.TerminalNode
	NUMBER_TYPE() antlr.TerminalNode
	BOOLEAN_TYPE() antlr.TerminalNode
	DATETIME_TYPE() antlr.TerminalNode
	TIME_ONLY_TYPE() antlr.TerminalNode
	DATETIME_ONLY_TYPE() antlr.TerminalNode
	DATE_ONLY_TYPE() antlr.TerminalNode
	FILE_TYPE() antlr.TerminalNode
	NIL_TYPE() antlr.TerminalNode
	ANY_TYPE() antlr.TerminalNode
	ARRAY_TYPE() antlr.TerminalNode
	OBJECT_TYPE() antlr.TerminalNode
	UNION_TYPE() antlr.TerminalNode

	// IsPrimitiveContext differentiates from other interfaces.
	IsPrimitiveContext()
}

type PrimitiveContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPrimitiveContext() *PrimitiveContext {
	var p = new(PrimitiveContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = rdtParserRULE_primitive
	return p
}

func InitEmptyPrimitiveContext(p *PrimitiveContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = rdtParserRULE_primitive
}

func (*PrimitiveContext) IsPrimitiveContext() {}

func NewPrimitiveContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PrimitiveContext {
	var p = new(PrimitiveContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = rdtParserRULE_primitive

	return p
}

func (s *PrimitiveContext) GetParser() antlr.Parser { return s.parser }

func (s *PrimitiveContext) STRING_TYPE() antlr.TerminalNode {
	return s.GetToken(rdtParserSTRING_TYPE, 0)
}

func (s *PrimitiveContext) INTEGER_TYPE() antlr.TerminalNode {
	return s.GetToken(rdtParserINTEGER_TYPE, 0)
}

func (s *PrimitiveContext) NUMBER_TYPE() antlr.TerminalNode {
	return s.GetToken(rdtParserNUMBER_TYPE, 0)
}

func (s *PrimitiveContext) BOOLEAN_TYPE() antlr.TerminalNode {
	return s.GetToken(rdtParserBOOLEAN_TYPE, 0)
}

func (s *PrimitiveContext) DATETIME_TYPE() antlr.TerminalNode {
	return s.GetToken(rdtParserDATETIME_TYPE, 0)
}

func (s *PrimitiveContext) TIME_ONLY_TYPE() antlr.TerminalNode {
	return s.GetToken(rdtParserTIME_ONLY_TYPE, 0)
}

func (s *PrimitiveContext) DATETIME_ONLY_TYPE() antlr.TerminalNode {
	return s.GetToken(rdtParserDATETIME_ONLY_TYPE, 0)
}

func (s *PrimitiveContext) DATE_ONLY_TYPE() antlr.TerminalNode {
	return s.GetToken(rdtParserDATE_ONLY_TYPE, 0)
}

func (s *PrimitiveContext) FILE_TYPE() antlr.TerminalNode {
	return s.GetToken(rdtParserFILE_TYPE, 0)
}

func (s *PrimitiveContext) NIL_TYPE() antlr.TerminalNode {
	return s.GetToken(rdtParserNIL_TYPE, 0)
}

func (s *PrimitiveContext) ANY_TYPE() antlr.TerminalNode {
	return s.GetToken(rdtParserANY_TYPE, 0)
}

func (s *PrimitiveContext) ARRAY_TYPE() antlr.TerminalNode {
	return s.GetToken(rdtParserARRAY_TYPE, 0)
}

func (s *PrimitiveContext) OBJECT_TYPE() antlr.TerminalNode {
	return s.GetToken(rdtParserOBJECT_TYPE, 0)
}

func (s *PrimitiveContext) UNION_TYPE() antlr.TerminalNode {
	return s.GetToken(rdtParserUNION_TYPE, 0)
}

func (s *PrimitiveContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PrimitiveContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PrimitiveContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case rdtParserVisitor:
		return t.VisitPrimitive(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *rdtParser) Primitive() (localctx IPrimitiveContext) {
	localctx = NewPrimitiveContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, rdtParserRULE_primitive)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(32)
		_la = p.GetTokenStream().LA(1)

		if !((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&2097024) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IOptionalContext is an interface to support dynamic dispatch.
type IOptionalContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	OPTIONAL_NOTATION() antlr.TerminalNode
	Primitive() IPrimitiveContext
	Group() IGroupContext
	Reference() IReferenceContext

	// IsOptionalContext differentiates from other interfaces.
	IsOptionalContext()
}

type OptionalContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyOptionalContext() *OptionalContext {
	var p = new(OptionalContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = rdtParserRULE_optional
	return p
}

func InitEmptyOptionalContext(p *OptionalContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = rdtParserRULE_optional
}

func (*OptionalContext) IsOptionalContext() {}

func NewOptionalContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *OptionalContext {
	var p = new(OptionalContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = rdtParserRULE_optional

	return p
}

func (s *OptionalContext) GetParser() antlr.Parser { return s.parser }

func (s *OptionalContext) OPTIONAL_NOTATION() antlr.TerminalNode {
	return s.GetToken(rdtParserOPTIONAL_NOTATION, 0)
}

func (s *OptionalContext) Primitive() IPrimitiveContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPrimitiveContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPrimitiveContext)
}

func (s *OptionalContext) Group() IGroupContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IGroupContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IGroupContext)
}

func (s *OptionalContext) Reference() IReferenceContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IReferenceContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IReferenceContext)
}

func (s *OptionalContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *OptionalContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *OptionalContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case rdtParserVisitor:
		return t.VisitOptional(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *rdtParser) Optional() (localctx IOptionalContext) {
	localctx = NewOptionalContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, rdtParserRULE_optional)
	p.EnterOuterAlt(localctx, 1)
	p.SetState(37)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case rdtParserSTRING_TYPE, rdtParserINTEGER_TYPE, rdtParserNUMBER_TYPE, rdtParserBOOLEAN_TYPE, rdtParserDATETIME_TYPE, rdtParserTIME_ONLY_TYPE, rdtParserDATETIME_ONLY_TYPE, rdtParserDATE_ONLY_TYPE, rdtParserFILE_TYPE, rdtParserNIL_TYPE, rdtParserANY_TYPE, rdtParserARRAY_TYPE, rdtParserOBJECT_TYPE, rdtParserUNION_TYPE:
		{
			p.SetState(34)
			p.Primitive()
		}

	case rdtParserLPAREN:
		{
			p.SetState(35)
			p.Group()
		}

	case rdtParserIDENTIFIER:
		{
			p.SetState(36)
			p.Reference()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}
	{
		p.SetState(39)
		p.Match(rdtParserOPTIONAL_NOTATION)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IArrayContext is an interface to support dynamic dispatch.
type IArrayContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ARRAY_NOTATION() antlr.TerminalNode
	Primitive() IPrimitiveContext
	Group() IGroupContext
	Reference() IReferenceContext

	// IsArrayContext differentiates from other interfaces.
	IsArrayContext()
}

type ArrayContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyArrayContext() *ArrayContext {
	var p = new(ArrayContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = rdtParserRULE_array
	return p
}

func InitEmptyArrayContext(p *ArrayContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = rdtParserRULE_array
}

func (*ArrayContext) IsArrayContext() {}

func NewArrayContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ArrayContext {
	var p = new(ArrayContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = rdtParserRULE_array

	return p
}

func (s *ArrayContext) GetParser() antlr.Parser { return s.parser }

func (s *ArrayContext) ARRAY_NOTATION() antlr.TerminalNode {
	return s.GetToken(rdtParserARRAY_NOTATION, 0)
}

func (s *ArrayContext) Primitive() IPrimitiveContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPrimitiveContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPrimitiveContext)
}

func (s *ArrayContext) Group() IGroupContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IGroupContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IGroupContext)
}

func (s *ArrayContext) Reference() IReferenceContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IReferenceContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IReferenceContext)
}

func (s *ArrayContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ArrayContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ArrayContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case rdtParserVisitor:
		return t.VisitArray(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *rdtParser) Array() (localctx IArrayContext) {
	localctx = NewArrayContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, rdtParserRULE_array)
	p.EnterOuterAlt(localctx, 1)
	p.SetState(44)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case rdtParserSTRING_TYPE, rdtParserINTEGER_TYPE, rdtParserNUMBER_TYPE, rdtParserBOOLEAN_TYPE, rdtParserDATETIME_TYPE, rdtParserTIME_ONLY_TYPE, rdtParserDATETIME_ONLY_TYPE, rdtParserDATE_ONLY_TYPE, rdtParserFILE_TYPE, rdtParserNIL_TYPE, rdtParserANY_TYPE, rdtParserARRAY_TYPE, rdtParserOBJECT_TYPE, rdtParserUNION_TYPE:
		{
			p.SetState(41)
			p.Primitive()
		}

	case rdtParserLPAREN:
		{
			p.SetState(42)
			p.Group()
		}

	case rdtParserIDENTIFIER:
		{
			p.SetState(43)
			p.Reference()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}
	{
		p.SetState(46)
		p.Match(rdtParserARRAY_NOTATION)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IUnionContext is an interface to support dynamic dispatch.
type IUnionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllType_() []ITypeContext
	Type_(i int) ITypeContext
	AllWS() []antlr.TerminalNode
	WS(i int) antlr.TerminalNode
	AllPIPE() []antlr.TerminalNode
	PIPE(i int) antlr.TerminalNode

	// IsUnionContext differentiates from other interfaces.
	IsUnionContext()
}

type UnionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyUnionContext() *UnionContext {
	var p = new(UnionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = rdtParserRULE_union
	return p
}

func InitEmptyUnionContext(p *UnionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = rdtParserRULE_union
}

func (*UnionContext) IsUnionContext() {}

func NewUnionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *UnionContext {
	var p = new(UnionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = rdtParserRULE_union

	return p
}

func (s *UnionContext) GetParser() antlr.Parser { return s.parser }
